fix: styling for collapsed table rows (fixes SFKUI-6984)

--- a/packages/design/src/components/table/_table.scss
+++ b/packages/design/src/components/table/_table.scss
@@ -97,7 +97,7 @@ $table-input-offset-horizontal: 0.25rem;
 }
 
 %table-row-collapsed {
-    visibility: collapse;
+    display: none;
 }
 
 #{$TABLE_SELECTOR} {
